@@ -1,3 +1,10 @@
+2002-10-04    <scott@scottg.net>
+
+	* TODO: Added back to the repository.
+
+	* Makefile: Updated with new targets for tagging and releasing
+	code (stolen from Rob Mayoff's nscache Makefile :)
+
 2002-05-28  Scott Goodwin  <scott@scottg.net>
 
 	* init.c: added some user-friendly error messages when key fails
